# SoftGLRender

./: .clang-format  .gitignore  CMakeLists.txt  format_code.sh
src/Base/: AuxMath.cpp  AuxMath.h  Buffer.h  FileUtils.h  GLMInc.h  Geometry.cpp  Geometry.h  HashUtils.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  MemoryUtils.h  Platform.h  SIMD.h  StringUtils.h  ThreadPool.h  Timer.cpp  Timer.h  UUID.h
src/Render/: Framebuffer.h  PipelineStates.h  RenderStates.h  Renderer.h  ShaderProgram.h  Texture.h  Uniform.h  Vertex.h
src/Render/OpenGL/: EnumsOpenGL.h  FramebufferOpenGL.h  GLSLUtils.cpp  GLSLUtils.h  OpenGLUtils.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderProgramOpenGL.h  TextureOpenGL.h  UniformOpenGL.h  VertexOpenGL.h
src/Render/Software/: BlendSoft.h  DepthSoft.h  FramebufferSoft.h  RendererInternal.h  RendererSoft.cpp  RendererSoft.h  SamplerSoft.h  ShaderProgramSoft.h  ShaderSoft.h  TextureSoft.h  UniformSoft.h  VertexSoft.h
src/Render/Vulkan/: EnumsVulkan.h  FrameBufferVulkan.cpp  FramebufferVulkan.h  PipelineStatesVulkan.h  RendererVulkan.cpp  RendererVulkan.h  ShaderProgramVulkan.h  TextureVulkan.cpp  TextureVulkan.h  UniformVulkan.h  VKContext.cpp  VKContext.h  VKGLInterop.cpp  VKGLInterop.h  VertexVulkan.h  VulkanLoader.cpp  VulkanLoader.h  VulkanUtils.h
src/Render/Vulkan/SPIRV/: SpvCache.cpp  SpvCache.h  SpvCompiler.cpp  SpvCompiler.h
src/Viewer/: Camera.cpp  Camera.h  Config.h  ConfigPanel.cpp  ConfigPanel.h  Cube.h  Environment.cpp  Environment.h  Main.cpp  Material.cpp  Material.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  QuadFilter.cpp  QuadFilter.h  RenderDebug.cpp  RenderDebug.h  Viewer.cpp  Viewer.h  ViewerManager.h  ViewerOpenGL.h  ViewerSoftware.h  ViewerVulkan.h
src/Viewer/Shader/Software/: BasicSoft.h  BlinnPhongSoft.h  FxaaSoft.h  IBLIrradianceSoft.h  IBLPrefilterSoft.h  PbrSoft.h  ShaderSoft.h  SkyboxSoft.h
